# slpz

./: Cargo.toml  Readme.md
examples/: test_compress.rs  test_reorder.rs
src/: lib.rs  slpz.rs
